岡田先生のページを修正

--- a/okada/index.html
+++ b/okada/index.html
@@ -51,7 +51,9 @@
                       <p><a href="http://www.k.u-tokyo.ac.jp/complex/index.html" target="_blank"rel="noopener noreferrer">東京大学大学院 新領域創成科学研究科 複雑理工学専攻</a> 教授<br>
                         <a href="https://www.phys.s.u-tokyo.ac.jp/" target="_blank"rel="noopener noreferrer">東京大学大学院 理学系研究科 物理学専攻</a>（兼担）<br>
                         <a href="https://cinet.jp/japanese/" target="_blank"rel="noopener noreferrer">国立研究開発法人 NICT-情報通信研究機構 脳情報通信融合研究センター</a> 招聘研究員<br>
-                        <a href="http://www.nims.go.jp/index.html" target="_blank"rel="noopener noreferrer">国立研究開発法人 物質・材料研究機構 統合型材料開発・情報基盤部門</a> 招聘研究員　</em></p>
+                        <a href="http://www.nims.go.jp/index.html" target="_blank"rel="noopener noreferrer">国立研究開発法人 物質・材料研究機構 統合型材料開発・情報基盤部門</a> 招聘研究員<br>
+                         <a href="http://rud.spring8.or.jp/" target="_blank"rel="noopener noreferrer">公益財団法人高輝度光科学研究センター・放射光利用研究基盤センター</a> 客員研究員</em></p>
+              
 </div>
 <div class="article">
 <h3>経歴</h3>
