岡田先生のページを修正

--- a/okada/index.html
+++ b/okada/index.html
@@ -96,11 +96,16 @@
 					  
 						
 <h4>2022(307～)</h4>
-<ol reversed start="313">
+<ol reversed start="315">
 
-<li>Masato Kamiya, Yasuhiko Igarashi, Masato Okada, Toshitaka Baba<br>
-"Numerical experiments on tsunami flow depth prediction for clustered areas using regression and machine learning models"<br>
-Earth, Planets and Space (2022)
+<li>Ryota Moriguchi, Satoshi Tsutsui, Shun Katakami, Kenji Nagata, Masaichiro Mizumaki, Masato Okada<br>
+"Bayesian Inference on Hamiltonian Selections for Mössbauer Spectroscopy"<br>
+to be published in Journal of the Physical Society of Japan (2022)
+</li>
+
+<li>Koki Obinata, Tomofumi Nakayama, Atsushi Ishikawa, Keitaro Sodeyama, Kenji Nagata, Yasuhiko Igarashi and Masato Okada<br>
+"Data integration for multiple alkali metals in predicting coordination energies based on Bayesian inference"<br>
+Science and Technology of Advanced Materials: Methods (2022)
 </li>
 
 <li>Shun Katakami, Hirotaka Sakamoto, Kenji Nagata, Taka-hisa Arima, and Masato Okada<br>
