岡田先生のページを修正

--- a/okada/index.html
+++ b/okada/index.html
@@ -96,7 +96,12 @@
 					  
 						
 <h4>2022(307～)</h4>
-<ol reversed start="315">
+<ol reversed start="316">
+
+<li>Masato Kamiya, Yasuhiko Igarashi, Masato Okada & Toshitaka Baba <br>
+"Numerical experiments on tsunami flow depth prediction for clustered areas using regression and machine learning models"<br>
+Earth, Planets and Space volume 74,127 (2022) 
+</li>
 
 <li>Ryota Moriguchi, Satoshi Tsutsui, Shun Katakami, Kenji Nagata, Masaichiro Mizumaki, Masato Okada<br>
 "Bayesian Inference on Hamiltonian Selections for Mössbauer Spectroscopy"<br>
