update: Update paper list

--- a/obinata/index.html
+++ b/obinata/index.html
@@ -34,6 +34,13 @@
 	  <li>英文学術論文</li>
 	  <ol>
 		<li>
+          Koki Obinata, Tomofumi Nakayama, Atsushi Ishikawa, Keitaro Sodeyama, Kenji Nagata, Yasuhiko Igarashi and Masato Okada<br>
+          Data integration for multiple alkali metals in predicting coordination energies based on Bayesian inference<br>
+          Science and Technology of Advanced Materials: Methods, Volume 2, 2022 - Issue 1<br>
+		  <a href="https://doi.org/10.1080/27660400.2022.2108353">https://doi.org/10.1080/27660400.2022.2108353</a>
+		</li>
+        <br>
+		<li>
 		  Koki Obinata, Shun Katakami, Yonghao Yue and Masato Okada<br>
 		  Ising Model Parameter Estimation with Confidence Evaluation Using the Exchange Monte Carlo Method<br>
 		  Journal of the Physical Society of Japan, 88(6), 064802, 2019<br>
