--- a/sakata/index.html
+++ b/sakata/index.html
@@ -28,12 +28,10 @@
 <p>
 <h2>経歴</h2>
 <table>
-<tr><td>2012年3月</td><td>広島大学付属福山高等学校　卒業</td></tr>
-<tr><td>2013年4月</td><td>京都大学　理学部　入学</td></tr>
-<tr><td>2017年3月</td><td>京都大学　理学部　卒業</td></tr>
 <tr><td>2017年4月</td><td>東京大学　大学院理学系研究科　物理学専攻　修士課程　入学</td></tr>
 <tr><td>2019年3月</td><td>東京大学　大学院理学系研究科　物理学専攻　修士課程　卒業</td></tr>
 <tr><td>2019年4月</td><td>東京大学　大学院理学系研究科　物理学専攻　博士課程　入学</td></tr>
+<tr><td>2022年9月</td><td>東京大学　大学院理学系研究科　物理学専攻　博士課程　卒業</td></tr>
 </p>
 </table>
 
