--- a/nishimura/index.html
+++ b/nishimura/index.html
@@ -46,7 +46,7 @@
                     西村怜，片上舜，永田賢二，水牧仁一朗，岡田真人<br>
                     複数実験結果を用いたベイズ推論によるパラメータ推定<br>
                     第25回情報論的学習理論ワークショップ (IBIS2022)，つくば国際会議場，2-020，2022年11月．<br>
-                    <a href="/images/IBIS_2022.pdf">ポスター</a><br>
+                    <a href="./images/IBIS_2022.pdf">ポスター</a><br>
                 <br>
                 </li>
                 <li>
