--- a/kashiwamura/index.html
+++ b/kashiwamura/index.html
@@ -61,6 +61,12 @@
 <td valign="top">
 <hr>
 <font size="4"></font>
+<ol start="2">
+    <li>柏村周平, 片上舜，岩満一功，熊添博之，永田賢二，岡島敏浩，赤井一郎，岡田真人<br>
+        ポアソン分布を用いたX線吸収スペクトルの解析 <br>
+        第25回情報論的学習理論ワークショップ (IBIS2022)，つくば国際会議場，2-001，2022年11月．<br>
+    </li>
+</ol>
 <ol start="1">
     <li>柏村周平, 片上舜，岩満一功，熊添博之，永田賢二，岡島敏浩，赤井一郎，岡田真人<br>
         XANESスペクトルのベイズ的スペクトル分解 <br>
