--- a/machida/index.html
+++ b/machida/index.html
@@ -59,6 +59,11 @@
       <ol reversed>
         <li>
           町田惇，永田賢二，村上諒，篠塚寛志，庄野逸，吉川英樹，岡田真人<br>
+          XPSシミュレータを用いたベイズ的スペクトル解析<br>
+          第25回情報論的学習理論ワークショップ (IBIS2022)，つくば国際会議場，1-021，2022年11月．
+        </li><br>
+        <li>
+          町田惇，永田賢二，村上諒，篠塚寛志，庄野逸，吉川英樹，岡田真人<br>
           SESSAを生成モデルに用いた多元素XPSスペクトル解析に向けたベイズ推定<br>
           第69回応用物理学会春季学術講演会，青山学院大学 相模原キャンパス＆オンライン ハイブリッド開催，2022年3月．
         </li><br>
