岡田先生のページを修正

--- a/okada/index.html
+++ b/okada/index.html
@@ -96,7 +96,17 @@
 					  
 						
 <h4>2022(307～)</h4>
-<ol reversed start="316">
+<ol reversed start="317">
+
+<li>Satoru Tokuda, Kenji Nagata, and Masato Okada<br>
+"Intrinsic regularization effect in Bayesian nonlinear regression scaled by observed data"<br>
+Phys. Rev. Research 4, 043165 (2022)
+</li>
+
+<li>Tatsu Kuwatani, Hideitsu Hino, Kenji Nagata, Takahiro Kawashima, Mitsuhiro Toriumi and Masato Okada<br>
+"Hyperparameter estimation using a resolution matrix for Bayesian sensing"<br>
+Inverse Problems 38, 124004 (2022)
+</li>
 
 <li>Masato Kamiya, Yasuhiko Igarashi, Masato Okada & Toshitaka Baba <br>
 "Numerical experiments on tsunami flow depth prediction for clustered areas using regression and machine learning models"<br>
