岡田先生のページを修正

--- a/okada/index.html
+++ b/okada/index.html
@@ -100,7 +100,10 @@
 
 <li>Satoru Tokuda, Kenji Nagata, and Masato Okada<br>
 "Intrinsic regularization effect in Bayesian nonlinear regression scaled by observed data"<br>
-Phys. Rev. Research 4, 043165 (2022)
+Phys. Rev. Research 4, 043165 (2022)<br>
+プレスリリース　<a href="https://www.k.u-tokyo.ac.jp/information/category/press/9905.html" target="_blank"rel="noopener noreferrer">東京大学</a>・
+	         <a href="https://www.kyushu-u.ac.jp/ja/researches/view/852" target="_blank"rel="noopener noreferrer">九州大学</a>・
+	         <a href="https://www.nikkei.com/article/DGXZRSP645381_V01C22A2000000/?au=0" target="_blank"rel="noopener noreferrer">日本経済新聞</a><br>
 </li>
 
 <li>Tatsu Kuwatani, Hideitsu Hino, Kenji Nagata, Takahiro Kawashima, Mitsuhiro Toriumi and Masato Okada<br>
