--- a/shimizu/common.html
+++ b/shimizu/common.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- TOPページ -->
+<!-- ウェブページの共通部分を記述 -->
 
 <html>
     <head>
@@ -33,27 +33,7 @@
                 </div>
             </div>
         </header>
-        <!-- mainここから -->
-        <main class="main">
-            <div class="first-view">
-                <div class="first-view-text">
-                    <h1>清水 将海</h1>
-                    <h2>Masaumi Shimizu</h2>
-                    <p>東京大学<br>新領域創成科学研究科 複雑理工学専攻<br>岡田研究室</p>
-                </div>
-            </div>
-            <div class="lead">
-                <p>
-                    東京大学新領域創成科学研究科複雑理工学専攻岡田研究室の清水将海です。<br>
-                    電気生理学実験により得られたサルのニューロン発火データに対して機械学習の手法を適用することで<br>
-                    サルやヒトが階層的なカテゴリー情報を脳内でどの様に処理しているかを探っています。
-                </p>
-                <div class="link-button-area">
-                    <a class="link-button" href="./research.html">RESEARCH</a>
-                </div>
-            </div>
-        </main>
-        <!-- mainここまで -->
+        <main class="main"></main>
         <footer class="footer">
             <nav class="site-menu-foot">
                 <ul>
