--- a/shimizu/profile.html
+++ b/shimizu/profile.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<!-- TOPページ -->
+<!-- 経歴 -->
 
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Masaumi Shimizu</title>
-        <meta name="description" content="東京大学新領域創成科学研究科複雑理工学専攻岡田研究室清水将海のウェブページです。">
+        <title>PROFILE | Masaumi Shimizu</title>
+        <meta name="description" content="岡田研究室清水将海の経歴です。">
         <meta name="viewport" content="width=device-width">
         <script src="./js/toggle-menu.js"></script>
         <link href="./css/common.css" rel="stylesheet">
-        <link href="./css/index.css" rel="stylesheet">
+        <link href="./css/profile.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Philosopher:ital@1&family=Tangerine:wght@700&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
     <body>
         <header class="header">
             <div class="header-inner">
-                <a class="header-logo" href="../index.html">
+                <a class="header-logo" href="./index.html">
                     <img src="./images/common/logo-okada.png" alt="OkadaLab"> 
                 </a>
                 <button class="toggle-menu-button"></button>
@@ -33,27 +33,26 @@
                 </div>
             </div>
         </header>
-        <!-- mainここから -->
+        <!-- main -->
         <main class="main">
-            <div class="first-view">
-                <div class="first-view-text">
-                    <h1>清水 将海</h1>
-                    <h2>Masaumi Shimizu</h2>
-                    <p>東京大学<br>新領域創成科学研究科 複雑理工学専攻<br>岡田研究室</p>
-                </div>
+            <div class="title">
+                <h1>PROFILE</h1>
+                <p>経歴</p>
             </div>
-            <div class="lead">
-                <p>
-                    東京大学新領域創成科学研究科複雑理工学専攻岡田研究室の清水将海です。<br>
-                    電気生理学実験により得られたサルのニューロン発火データに対して機械学習の手法を適用することで<br>
-                    サルやヒトが階層的なカテゴリー情報を脳内でどの様に処理しているかを探っています。
-                </p>
-                <div class="link-button-area">
-                    <a class="link-button" href="./research.html">RESEARCH</a>
+
+            <!-- feature -->
+            <div class="feature">
+                <div class="feature-text">
+                    <h2>経歴</h2>
+                    <ul>
+                        <li>2016.3 長野県立上田高等学校　卒業</li>
+                        <li>2017.4 東京理科大学 理工学部物理学科　入学</li>
+                        <li>2021.3 東京理科大学 理工学部物理学科　卒業</li>
+                        <li>2021.4 東京大学 新領域創成科学研究科 複雑理工学専攻 修士課程　入学</li>
+                    </ul>
                 </div>
             </div>
         </main>
-        <!-- mainここまで -->
         <footer class="footer">
             <nav class="site-menu-foot">
                 <ul>
