--- a/shimizu/research.html
+++ b/shimizu/research.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- TOPページ -->
+<!-- ウェブページの共通部分を記述 -->
 
 <html>
     <head>
@@ -9,7 +9,7 @@
         <meta name="viewport" content="width=device-width">
         <script src="./js/toggle-menu.js"></script>
         <link href="./css/common.css" rel="stylesheet">
-        <link href="./css/index.css" rel="stylesheet">
+        <link href="./css/research.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Philosopher:ital@1&family=Tangerine:wght@700&display=swap" rel="stylesheet">
@@ -33,27 +33,27 @@
                 </div>
             </div>
         </header>
-        <!-- mainここから -->
+         <!-- main -->
         <main class="main">
-            <div class="first-view">
-                <div class="first-view-text">
-                    <h1>清水 将海</h1>
-                    <h2>Masaumi Shimizu</h2>
-                    <p>東京大学<br>新領域創成科学研究科 複雑理工学専攻<br>岡田研究室</p>
-                </div>
+            <div class="title">
+                <h1>RESEARCH</h1>
+                <p>研究内容</p>
             </div>
-            <div class="lead">
-                <p>
-                    東京大学新領域創成科学研究科複雑理工学専攻岡田研究室の清水将海です。<br>
-                    電気生理学実験により得られたサルのニューロン発火データに対して機械学習の手法を適用することで<br>
-                    サルやヒトが階層的なカテゴリー情報を脳内でどの様に処理しているかを探っています。
-                </p>
-                <div class="link-button-area">
-                    <a class="link-button" href="./research.html">RESEARCH</a>
+
+            <!-- feature -->
+            <div class="feature">
+                <div class="feature-text">
+                    <h2>脳はカテゴリー情報をどの様に処理しているのか</h2>
+                    <p>
+                        サルやヒトといった霊長類は物体の視覚的な特徴に基づいてその物体をカテゴリー分類することができます。
+                        しかし、このようなカテゴリー分類が脳内でどの様に行われているかについては明らかになっていない点が多く存在します。
+                        <br>そこで、私は電気生理学実験で得られたサルのニューロン活動を解析することで脳内で視覚的なカテゴリー情報がどの様に処理されているのかを探っています。
+                        更に、ニューロン活動を解析することで得られた結果を基に脳の視覚系を再現するニューラルネットワークモデルを構築する、
+                        という研究も行っています。
+                    </p>
                 </div>
             </div>
         </main>
-        <!-- mainここまで -->
         <footer class="footer">
             <nav class="site-menu-foot">
                 <ul>
