岡田先生のページを更新

--- a/okada/index.html
+++ b/okada/index.html
@@ -96,7 +96,12 @@
 					  
 						
 <h4>2022(307～)</h4>
-<ol reversed start="317">
+<ol reversed start="318">
+
+<li>Hajime Ueda, Shun Katakami, Shogo Yoshida, Takehide Koyama, Yusuke Nakai, Takeshi Mito, Masaichiro Mizumaki, Masato Okada<br>
+"Bayesian approach to $T_1$ analysis in NMR spectroscopy with applications to solid state physics"<br>
+to be published in J. Phys. Soc. Jpn (2022)
+</li>
 
 <li>Satoru Tokuda, Kenji Nagata, and Masato Okada<br>
 "Intrinsic regularization effect in Bayesian nonlinear regression scaled by observed data"<br>
@@ -118,7 +123,7 @@ Earth, Planets and Space volume 74,127 (2022)
 
 <li>Ryota Moriguchi, Satoshi Tsutsui, Shun Katakami, Kenji Nagata, Masaichiro Mizumaki, Masato Okada<br>
 "Bayesian Inference on Hamiltonian Selections for Mössbauer Spectroscopy"<br>
-to be published in Journal of the Physical Society of Japan (2022)
+Journal of the Physical Society of Japan. 91, 104002 (2022) 
 </li>
 
 <li>Koki Obinata, Tomofumi Nakayama, Atsushi Ishikawa, Keitaro Sodeyama, Kenji Nagata, Yasuhiko Igarashi and Masato Okada<br>
