--- a/lab.html
+++ b/lab.html
@@ -83,7 +83,7 @@
 
 2023/3/7 「<a href="http://www.spring8.or.jp/ja/science/meetings/2023/230307/"target="_blank"rel="noopener noreferrer">第88回SPring-8先端利用技術ワークショップ/「第4回データ駆動科学によるデータ解析高度化～ベイズ計測～</a>」<br>
 岡田真人　「ベイズ計測」<br>
-森口椋太　「メスバウアーハミルトニアン推定」<br>
+森口椋太　「<a href="images/20230307_moriguchi.pdf">メスバウアーハミルトニアン推定</a>」<br>
 林　悠偉　「<a href="images/20230307_hayashi.pdf">X線小角散乱プロファイルのベイズ推定</a>」<br>
 片上　舜　「<a href="images/20230307_katakami.pdf">ベイズ推定のスキーム〜全てのユーザーのために〜</a>」
 <p>
