岡田先生のページを修正

--- a/okada/index.html
+++ b/okada/index.html
@@ -96,8 +96,13 @@
 					  
 
 <h4>2023(318～)</h4>
-<ol reversed start="318">
+<ol reversed start="319">
 
+<li>Ryuta Sasaki1, Shunki Nakagawa, Kazushi Mimura, Masato Okada, Toru Aonishi, and Yoshihisa Yamamoto<br>
+"Effect of Coupling Discretization on Coherent-Ising-Machine-Implemented Hopfield Model"<br>
+Journal of the Physical Society of Japan.92, 044002 (2023) 
+</li>						
+	
 <li>Hajime Ueda, Shun Katakami, Shogo Yoshida, Takehide Koyama, Yusuke Nakai, Takeshi Mito, Masaichiro Mizumaki, Masato Okada<br>
 "Bayesian approach to $T_1$ analysis in NMR spectroscopy with applications to solid state physics"<br>
 to be published in J. Phys. Soc. Jpn (2023)
