--- a/home.html
+++ b/home.html
@@ -163,13 +163,12 @@
       <dl>
         <dt class=leftline>物性物理学</dt>
         <dd class=para1>
-          日本の国力の源泉は物質材料科学にあります．日本はこの分野で常に世界のトップを走り続けてきました．近年，計算機の性能の劇的な向上に伴い，膨大な数の材料探索を計算機の中でのシミュレーションによって行うことが可能になり，世界中で競争が激化しています．資本力で劣る日本が世界に勝つには，低コストかつ高速に材料探索を進める必要があります．私たちは長年の研究で培ってきたスパースモデリングやベイズ的機械学習に代表されるデータ科学手法を用いてマテリアルズ・インフォマティクスの新しい枠組みを構築し，他分野との連携も通して，世界の普遍的な構造の研究を進めています．
-        </dd>
+        日本の国力の源泉は物質材料科学にあります．日本はこの分野で常に世界のトップを走り続けてきました．近年，計算機の性能の劇的な向上に伴い，膨大な数の材料探索を計算機の中でのシミュレーションによって行うことが可能になり，世界中で競争が激化しています．資本力で劣る日本が世界に勝つには，低コストかつ高速に材料探索を進める必要があります．私たちは長年の研究で培ってきた<a href="http://sparse-modeling.jp/"target="_blank"rel="noopener noreferrer">スパースモデリング</a>や<a href="https://www.jst.go.jp/kisoken/crest/project/1111092/1111092_2017.html"target="_blank"rel="noopener noreferrer">ベイズ推論</a>に代表されるデータ科学手法を用いてマテリアルズ・インフォマティクスの新しい枠組みを構築し，他分野との連携も通して，世界の普遍的な構造の研究を進めています． </dd>
         <dt class=leftline>計測インフォマティクス</dt>
         <dd class=para1>計測は科学の母であり(Mother of Science)，計測科学が進歩することにより，多くの科学が進歩します．計測技術の向上は，計測の高度化と計測データの情報処理能力の二点で達成できます．我々は，そのうち，計測データの情報処理能力の向上を目指します．計測科学にベイズ推論を導入したベイズ計測を提案しています．ベイズ計測を用いてSPring-8全ビームラインベイズ化計画や複雑理工学専攻におけるデータ駆動科学の水平展開をおこなっています．</dd>
 		  
 		  <dt class=leftline>脳科学</dt>
-        <dd class=para1>David Marr から始まる計算論的神経科学では，計算理論，表現とアルゴリズム，ハードウェア実装の三つのレベルの視点で脳の情報処理メカニズムを考えます．対象としている系のマクロな計算理論が，ミクロなハードウェア上でどのように実行されるかを議論する，表現とアルゴリズムのレベルを理解するために，私たちは実験から得られたデータを解析しています．深層学習 (Deep Learning) で用いられる畳み込みニューラルネットワークは，一次視覚野の受容野特性にヒントを得て作られました．より高次の脳領野の計算を理論的に理解することは，新たな計算原理に基づく脳型人工知能の開発へと繋がります．</dd>
+        <dd class=para1>David Marr から始まる計算論的神経科学では，計算理論，表現とアルゴリズム，ハードウェア実装の三つのレベルの視点で脳の情報処理メカニズムを考えます．対象としている系のマクロな計算理論が，ミクロなハードウェア上でどのように実行されるかを議論する，表現とアルゴリズムのレベルを理解するために，私たちは実験から得られたデータを解析しています．深層学習 (Deep Learning) で用いられる畳み込みニューラルネットワークは，一次視覚野の受容野特性にヒントを得て作られました．より高次の脳領野の計算を理論的に理解することは，新たな計算原理に基づく脳型人工知能の開発へと繋がります．具体的には側頭葉のニューロンの特性をデータ駆動科学で解析しています．<a href="https://www.todaishimbun.org/prof_okada_20201102/"target="_blank"rel="noopener noreferrer">東大新聞にその記事が</a>にその記事が載っています．また<a href="https://staff.aist.go.jp/x-matsumoto/pcaresult.html"target="_blank"rel="noopener noreferrer">側頭葉の神経集団ベクトルのビデオ</a>があります．その知見を元に視覚野のモデルを構築しています。</dd>
 		  
         <dt class=leftline>地球惑星科学</dt>
         <dd class=para1>
