--- a/research.html
+++ b/research.html
@@ -34,7 +34,9 @@
       <ol class="list1" style="padding-left:16px;margin-left:16px">
         <li>SPring-8全ビームラインベイズ化計画<p>
 			<div class="box">
-			<img src="images/spring8.svg" width="400" height="314" style="float:right;margin-right:10px;margin-bottom:10px">ベイズ計測を国内外に浸透させるには，我々が単に研究を進めるだけでなく，データ駆動科学のロールモデルを世に提案することが重要である．そのためにもデータ駆動科学の水平展開が重要であり，大型放射光施設であるSPring-8への展開を考えた．SPring-8はアメリカのAdvanced Photon Source (APS)，ヨーロッパのEuropean Synchrotron Radiatio Facility(ESRF)とならんで世界3大規模放射光施設の中の一つである．理研はSPring-8を「データ創出基盤」であると言っている．それは，まさにそのとおりであり，日々全国の研究者がデータを「創出」している．年間延べ1万人が利用しており，IoT(Internet of Things)で得られるデータとは「質」の異なるデータが日々得られている．特に自然科学系のデータが創出されているデータの宝庫であるSPring-8を利用しない手はない．自然科学系全般の研究者が SPring-8に来ているので，さまざまな分野に対して水平展開する意義は大きく，データ解析の概念の革新をはかれる．<p></div></li>
+			<img src="images/spring8.svg" width="400" height="314" style="float:right;margin-right:10px;margin-bottom:10px">ベイズ計測を国内外に浸透させるには，我々が単に研究を進めるだけでなく，データ駆動科学のロールモデルを世に提案することが重要である．そのためにもデータ駆動科学の水平展開が重要であり，大型放射光施設である<a href="http://www.spring8.or.jp/ja/"target="_blank"rel="noopener noreferrer">SPring-8</a>への展開を考えた．SPring-8はアメリカのAdvanced Photon Source (APS)，ヨーロッパのEuropean Synchrotron Radiatio Facility(ESRF)とならんで世界3大規模放射光施設の中の一つである．理研はSPring-8を「データ創出基盤」であると言っている．それは，まさにそのとおりであり，日々全国の研究者がデータを「創出」している．年間延べ1万人が利用しており，IoT(Internet of Things)で得られるデータとは「質」の異なるデータが日々得られている．特に自然科学系のデータが創出されているデータの宝庫であるSPring-8を利用しない手はない．自然科学系全般の研究者が SPring-8に来ているので，さまざまな分野に対して水平展開する意義は大きく，データ解析の概念の革新をはかれる．
+			<p></p>
+		</div></li>
 			
         <li>複雑理工学専攻でのデータ駆動科学の水平展開<p>
         <div class="box">
@@ -46,7 +48,8 @@
 			
 		 <li>理論神経科学/計算論的神経科学/脳型人工知能<p>
 			視覚野を中心とし神経活動データを解析すると共に，その知見を用いて神経回路モデルを構築することで，脳神経系の情報処理原理を解明および，得られた知見を次世代脳型人工知能の設計原理つなげる．
-近年のAIブームのきっかけとなった深層畳み込みニューラルネットワーク(DCNN: Deep Convolutional Neural Network)の基本原理は, 1960年代初頭に得られた脳の視覚一次野(V1: Visual 1)に関するHubelとWieselの知見に基づいている．Hubel Wieselから60年，その間にえられた神経科学的な知見が，新たな人工知能の設計指針になりうる可能性があることを否定できる人はだれもいない．この骨太な方針のもと，DCNNと実際の脳の視覚野を比較した．その結果，脳の視覚野の最後にある側頭葉のニューロンの挙動が，DCNNでは説明できないことがわかった．そこで我々は，この知見をもとに，新たな視覚野のモデルを構築した．さらに現在，このモデルが実際の側頭葉のニューロンの挙動を説明できるかを，電気生理学実験を用いて検証中である．<p></li>   
+近年のAIブームのきっかけとなった深層畳み込みニューラルネットワーク(DCNN: Deep Convolutional Neural Network)の基本原理は, 1960年代初頭に得られた脳の視覚一次野(V1: Visual 1)に関するHubelとWieselの知見に基づいている．Hubel Wieselから60年，その間にえられた神経科学的な知見が，新たな人工知能の設計指針になりうる可能性があることを否定できる人はだれもいない．この骨太な方針のもと，DCNNと実際の脳の視覚野を比較した．その結果，脳の視覚野の最後にある<a href="https://www.todaishimbun.org/prof_okada_20201102/"target="_blank"rel="noopener noreferrer">側頭葉のニューロンの挙動</a>が，DCNNでは説明できないことがわかった．そこで我々は，<a href="https://staff.aist.go.jp/x-matsumoto/pcaresult.html"target="_blank"rel="noopener noreferrer">この知見</a>をもとに，新たな視覚野のモデルを構築した．さらに現在，このモデルが実際の側頭葉のニューロンの挙動を説明できるかを，電気生理学実験を用いて検証中である．
+		 <p></li>   
       </ol>
 
       <a class="anchor" id="publications"></a>
