--- a/shimizu/research.html
+++ b/shimizu/research.html
@@ -46,10 +46,13 @@
                     <h2>脳はカテゴリー情報をどの様に処理しているのか</h2>
                     <p>
                         サルやヒトといった霊長類は物体の視覚的な特徴に基づいてその物体をカテゴリー分類することができます。
+                        例えば，私たちはチワワ・プードル・ダルメシアン等を全て「イヌ」という同一カテゴリーとして認識しています。
                         しかし、このようなカテゴリー分類が脳内でどの様に行われているかについては明らかになっていない点が多く存在します。
-                        <br>そこで、私は電気生理学実験で得られたサルのニューロン活動を解析することで脳内で視覚的なカテゴリー情報がどの様に処理されているのかを探っています。
+                        <br>そこで、私は電気生理学実験で得られたサルのニューロン活動を機械学習の手法を用いて解析することで
+                        脳内で視覚的なカテゴリー情報がどの様に処理されているのかを探っています。
                         更に、ニューロン活動を解析することで得られた結果を基に脳の視覚系を再現するニューラルネットワークモデルを構築する、
                         という研究も行っています。
+                        <br>ニューロン活動を解析することで脳がカテゴリー情報をどの様に処理しているかを調べる研究については，<a class="research-link" href=" https://staff.aist.go.jp/x-matsumoto/pcaresult.html">こちら</a>もご覧ください．
                     </p>
                 </div>
             </div>
