--- a/shimizu/common.html
+++ b/shimizu/common.html
@@ -35,7 +35,7 @@
         </header>
         <main class="main"></main>
         <footer class="footer">
-            <nav class="site-menu-foot">
+            <nav class="site-menu">
                 <ul>
                     <li><a href="./index.html">TOP</a></li>
                     <li><a href="./profile.html">PROFILE</a></li>
