--- a/lab.html
+++ b/lab.html
@@ -92,15 +92,15 @@
 <p>
 
 <dt class=leftline>口頭発表</dt>
-2023/3/22-25 日本物理学会<br>
-柏村周平　　「<a href="pdf/2023jpsj_kashiwamura.pdf">吸収“率”ではなく吸収“量”を対象とした吸収スペクトルのベイズ的解析</a>」<br>
-上田朔　　　「<a href="pdf/2023jpsj_ueda.pdf">核磁気共鳴法へのデータ駆動科学的手法の開発</a>」<br>
-林　悠偉　　「<a href="pdf/2023jpsj_hayashi.pdf">小角散乱法データを用いた試料パラメータのベイズ推論</a>」<br>
-大日方孝輝　「<a href="pdf/2023jpsj_obinata.pdf">状態密度に基づく特徴量合成アプローチの信頼度評価</a>」<br>
+2023/3/22-25 <a href="https://www.jps.or.jp/activities/meetings/spring/spring_index.php"target="_blank"rel="noopener noreferrer">日本物理学会</a><br>
+柏村周平　　「吸収“率”ではなく吸収“量”を対象とした吸収スペクトルのベイズ的解析」<br>
+上田朔　　　「核磁気共鳴法へのデータ駆動科学的手法の開発」<br>
+林　悠偉　　「小角散乱法データを用いた試料パラメータのベイズ推論」<br>
+大日方孝輝　「状態密度に基づく特徴量合成アプローチの信頼度評価」<br>
 町田惇　　　「層構造を対象としたXPSシミュレータによるベイズスペクトル推論」<br>
 森口椋太　　「高次元ベイズ推論のためのnon-reversibleなサンプリング手法」<br>
 竝河伴裕　　「ベイズ推論による光吸収スペクトルのスペクトル分解」<br>
-塩谷佳介　　「<a href="pdf/2023jpsj_shioya.pdf">マカクザル側頭葉TE野ニューロンの顔表面特性の表現</a>」<br>
+塩谷佳介　　「マカクザル側頭葉TE野ニューロンの顔表面特性の表現」<br>
       </div>
     </section>
 
