--- a/lab.html
+++ b/lab.html
@@ -78,17 +78,17 @@
         <h3><em>News</em></h3>
 		 <p> <dt class=leftline>招待講演</dt>
 2023/3/31 「<a href="https://www.ai-cit-nihon-u.com/symposium/"target="_blank" rel="noopener noreferrer">人工知能とその応用シンポジウム</a>」<br>
-岡田真人　「人工知能応用とデータ駆動科学」
+岡田真人　「<a href="pdf/20230331.pdf">人工知能応用とデータ駆動科学</a>」
 <p> 2023/3/28-30 「<a href="https://sites.google.com/g.ecc.u-tokyo.ac.jp/ddima/?pli=1" target="_blank" rel="noopener noreferrer">データ駆動科学と情報計測の新展開</a>」<br>
   岡田真人　「全状態探索型スパースモデリング」<br>
   岡田真人　「ベイズ推論とSpMに基づく計測の情報数理基盤の構築」</p>
 <p>
-
-2023/3/7 「<a href="http://www.spring8.or.jp/ja/science/meetings/2023/230307/"target="_blank"rel="noopener noreferrer">第88回SPring-8先端利用技術ワークショップ/「第4回データ駆動科学によるデータ解析高度化～ベイズ計測～</a>」<br>
-岡田真人　「<a href="images/20230307_okada.pdf">ベイズ計測</a>」<br>
-森口椋太　「<a href="images/20230307_moriguchi.pdf">メスバウアーハミルトニアン推定</a>」<br>
-林　悠偉　「<a href="images/20230307_hayashi.pdf">X線小角散乱プロファイルのベイズ推定</a>」<br>
-片上　舜　「<a href="images/20230307_katakami.pdf">ベイズ推定のスキーム〜全てのユーザーのために〜</a>」
+  
+  2023/3/7 「<a href="http://www.spring8.or.jp/ja/science/meetings/2023/230307/"target="_blank"rel="noopener noreferrer">第88回SPring-8先端利用技術ワークショップ/「第4回データ駆動科学によるデータ解析高度化～ベイズ計測～</a>」<br>
+  岡田真人　「<a href="images/20230307_okada.pdf">ベイズ計測</a>」<br>
+  森口椋太　「<a href="images/20230307_moriguchi.pdf">メスバウアーハミルトニアン推定</a>」<br>
+  林　悠偉　「<a href="images/20230307_hayashi.pdf">X線小角散乱プロファイルのベイズ推定</a>」<br>
+  片上　舜　「<a href="images/20230307_katakami.pdf">ベイズ推定のスキーム〜全てのユーザーのために〜</a>」
 <p>
 
 <dt class=leftline>口頭発表</dt>
