--- a/lab.html
+++ b/lab.html
@@ -78,7 +78,7 @@
         <h3><em>News</em></h3>
 		 <p> <dt class=leftline>招待講演</dt>
 2023/3/31 「<a href="https://www.ai-cit-nihon-u.com/symposium/"target="_blank" rel="noopener noreferrer">人工知能とその応用シンポジウム</a>」<br>
-岡田真人　「<a href="pdf/20230331.pdf">人工知能応用とデータ駆動科学</a>」
+岡田真人　「人工知能応用とデータ駆動科学」<a href="pdf/20230331.pdf">Abstract</a>
 <p> 2023/3/28-30 「<a href="https://sites.google.com/g.ecc.u-tokyo.ac.jp/ddima/?pli=1" target="_blank" rel="noopener noreferrer">データ駆動科学と情報計測の新展開</a>」<br>
   岡田真人　「全状態探索型スパースモデリング」<br>
   岡田真人　「ベイズ推論とSpMに基づく計測の情報数理基盤の構築」</p>
