home.html lab.html research.htmlを修正

--- a/lab.html
+++ b/lab.html
@@ -58,8 +58,7 @@
 	</p>
 
 	<p>
-	また，高次元からのデータからの知識抽出が可能となることにより，データから直接モデルを見出す「データ駆動科学」を考えることができるようになります．当研究室では，データ駆動科学の創成のための基盤技術に関する研究も行っています．
-	</p>
+	また，高次元からのデータからの知識抽出が可能となることにより，データから直接モデルを見出す「<a href="pdf/datadrivenscience.pdf">データ駆動科学</a>」を考えることができるようになります．当研究室では，<a href="pdf/datadrivenscience.pdf">データ駆動科学</a>の創成のための基盤技術に関する研究も行っています． </p>
 
 <!--
         <p> 最近では，<a href="http://mns.k.u-tokyo.ac.jp/index.php?%A5%B9%A5%D1%A1%BC%A5%B9%A5%E2%A5%C7%A5%EA%A5%F3%A5%B0" title="スパースモデリング (485d)">スパースモデリング</a>についての研究を盛んに行っています．これは，脳科学・神経科学では，「スパース符号化」という仮説と密接に関連し，情報科学では圧縮センシングという技術とつながりがあり，高次元の観測データからの知識抽出という切り口から，幅広い自然科学分野のデータ解析において成果をあげつつあります．詳しくは，<a href="http://mns.k.u-tokyo.ac.jp/index.php?%A5%B9%A5%D1%A1%BC%A5%B9%A5%E2%A5%C7%A5%EA%A5%F3%A5%B0" title="スパースモデリング (485d)">スパースモデリング</a>をご覧ください．また，新学術領域「疎性モデリング」のホームページは<a href="http://sparse-modeling.ne.jp" rel="nofollow">こちら</a>をご覧ください． </p>
