--- a/research.html
+++ b/research.html
@@ -34,17 +34,18 @@
       <ol class="list1" style="padding-left:16px;margin-left:16px">
         <li>SPring-8全ビームラインベイズ化計画<p>
 			<div class="box">
-			<img src="images/spring8.svg" width="400" height="314" style="float:right;margin-right:10px;margin-bottom:10px">ベイズ計測を国内外に浸透させるには，我々が単に研究を進めるだけでなく，データ駆動科学のロールモデルを世に提案することが重要である．そのためにもデータ駆動科学の水平展開が重要であり，大型放射光施設である<a href="http://www.spring8.or.jp/ja/"target="_blank"rel="noopener noreferrer">SPring-8</a>への展開を考えた．SPring-8はアメリカのAdvanced Photon Source (APS)，ヨーロッパのEuropean Synchrotron Radiatio Facility(ESRF)とならんで世界3大規模放射光施設の中の一つである．理研はSPring-8を「データ創出基盤」であると言っている．それは，まさにそのとおりであり，日々全国の研究者がデータを「創出」している．年間延べ1万人が利用しており，IoT(Internet of Things)で得られるデータとは「質」の異なるデータが日々得られている．特に自然科学系のデータが創出されているデータの宝庫であるSPring-8を利用しない手はない．自然科学系全般の研究者が SPring-8に来ているので，さまざまな分野に対して水平展開する意義は大きく，データ解析の概念の革新をはかれる．
+			<img src="images/spring8.svg" width="400" height="314" style="float:right;margin-right:10px;margin-bottom:10px"><a href="pdf/bayesianmeasurement.pdf">ベイズ計測</a>を国内外に浸透させるには，我々が単に研究を進めるだけでなく，<a href="pdf/datadrivenscience.pdf">データ駆動科学</a>のロールモデルを世に提案することが重要である．そのためにも<a href="pdf/datadrivenscience.pdf">データ駆動科学</a>の水平展開が重要であり，大型放射光施設である<a href="http://www.spring8.or.jp/ja/" target="_blank" rel="noopener noreferrer">SPring-8</a>への展開を考えた．SPring-8はアメリカのAdvanced Photon Source (APS)，ヨーロッパのEuropean Synchrotron Radiatio Facility(ESRF)とならんで世界3大規模放射光施設の中の一つである．理研はSPring-8を「データ創出基盤」であると言っている．それは，まさにそのとおりであり，日々全国の研究者がデータを「創出」している．年間延べ1万人が利用しており，IoT(Internet of Things)で得られるデータとは「質」の異なるデータが日々得られている．特に自然科学系のデータが創出されているデータの宝庫であるSPring-8を利用しない手はない．自然科学系全般の研究者が SPring-8に来ているので，さまざまな分野に対して水平展開する意義は大きく，データ解析の概念の革新をはかれる．
 			<p></p>
 		</div></li>
 			
-        <li>複雑理工学専攻でのデータ駆動科学の水平展開<p>
+        <li>複雑理工学専攻での<a href="pdf/datadrivenscience.pdf">データ駆動科学</a>の水平展開<p>
         <div class="box">
 			   <img src="images/spectrum.svg" width="188" height="150" style="float:right;margin-right:10px;margin-bottom:10px">
-            データ駆動科学の核融合グループとアストロバイオロジーグループへの水平展開を行なっている．まずその皮切りとして，分光学を取り上げた．分光学はスケールや対象を超えて広く使われており，マルチスケールを取り扱う複雑理工でのデータ駆動科学の水平展開にうってつけの題材である．<p>
+            <a href="pdf/datadrivenscience.pdf">データ駆動科学</a>の核融合グループとアストロバイオロジーグループへの水平展開を行なっている．まずその皮切りとして，分光学を取り上げた．分光学はスケールや対象を超えて広く使われており，マルチスケールを取り扱う複雑理工での<a href="pdf/datadrivenscience.pdf">データ駆動科学</a>の水平展開にうってつけの題材である．<p>
 			 
-			分光学でデータ駆動科学の水平展開が可能になるのは以下の理由による．我々は2012年に，図1のような多峰性スペクトルをガウス関数のような単峰性の基底関数の線形和に分解するスペクトル分解にベイズ推論を適用した．スペクトル分解では，基底関数の個数Kをいかに決めるかが重要な問題である．<img src="images/modelselection.svg" width="188" height="324" style="float:right;margin-right:10px;margin-bottom:10px">図2(a)のK=1のようにKが小さすぎると観測データを再現できない．図2(b), (c)のように，Kを大きくするとデータの再現性は良くなるが，Kを大きくしすぎると観測ノイズを再現するために余分な基底関数を用いてしまう．このようにKに関するトレードオフがあり，最適なKが存在することがわかる．この最適なKを選ぶことを統計学ではモデル選択とよぶ．<p>
-			スペクトル分解の誤差関数は局所解を持ち，従来手法の最急降下法では局所解を回避できない．また，最急降下法ではモデル選択の問題を取り扱うことはできない．そこで我々はこの問題にベイズ推論を適用した．我々はレプリカ交換モンテカルロ法を用いることにより，局所解の問題を解決することができる．またベイズ計測では確率モデルでデータ生成の過程をモデル化しているので，モデル選択の問題も取り扱うことができる．<p>スペクトル分解の数理構造を考察すると，この枠組みは単にスペクトル分解だけに適用できる枠組みではなく，他の分光学の解析に用いることができることがわかる．<p></li>
+			分光学で<a href="pdf/datadrivenscience.pdf">データ駆動科学</a>の水平展開が可能になるのは以下の理由による．我々は2012年に，図1のような多峰性スペクトルをガウス関数のような単峰性の基底関数の線形和に分解するスペクトル分解にベイズ推論を適用した．スペクトル分解では，基底関数の個数Kをいかに決めるかが重要な問題である．<img src="images/modelselection.svg" width="188" height="324" style="float:right;margin-right:10px;margin-bottom:10px">図2(a)のK=1のようにKが小さすぎると観測データを再現できない．図2(b), (c)のように，Kを大きくするとデータの再現性は良くなるが，Kを大きくしすぎると観測ノイズを再現するために余分な基底関数を用いてしまう．このようにKに関するトレードオフがあり，最適なKが存在することがわかる．この最適なKを選ぶことを統計学ではモデル選択とよぶ．<p>
+			スペクトル分解の誤差関数は局所解を持ち，従来手法の最急降下法では局所解を回避できない．また，最急降下法ではモデル選択の問題を取り扱うことはできない．そこで我々はこの問題にベイズ推論を適用した．我々はレプリカ交換モンテカルロ法を用いることにより，局所解の問題を解決することができる．また<a href="pdf/bayesianmeasurement.pdf">ベイズ計測</a>では確率モデルでデータ生成の過程をモデル化しているので，モデル選択の問題も取り扱うことができる．
+			<p>スペクトル分解の数理構造を考察すると，この枠組みは単にスペクトル分解だけに適用できる枠組みではなく，他の分光学の解析に用いることができることがわかる．<p></li>
 			
 		 <li>理論神経科学/計算論的神経科学/脳型人工知能<p>
 			視覚野を中心とし神経活動データを解析すると共に，その知見を用いて神経回路モデルを構築することで，脳神経系の情報処理原理を解明および，得られた知見を次世代脳型人工知能の設計原理つなげる．
