--- a/home.html
+++ b/home.html
@@ -130,8 +130,7 @@
       <h2>研究室の方向性</h2>
       <p> 統計力学を学ぶと，我々はミクロからマクロへつながる階層的な構造が自然界のいたるところに存在することを意識し，物理学の枠組を越えて統計力学が活躍できる様な気がしてきます．<br>
 岡田研究室では，統計力学や物性理論等の多体系物理の普遍的な視点から，脳科学，情報科学，物性物理学を理論的研究しています．<br>
-さらに最近では，データ駆動科学を創成を目指し，そこで得られた理論的な知見を実証するために，多くの実験系研究室と共同研究を行っています．
-</p>
+さらに最近では，<a href="pdf/datadrivenscience.pdf">データ駆動科学</a>を創成を目指し，そこで得られた理論的な知見を実証するために，多くの実験系研究室と共同研究を行っています． </p>
       <p id="statistical_physics_wrapper">
         <img id="statistical_physics" width="100%" src="./images/statistical_physics.png" alt="物理学から見た脳科学">
       </p>
@@ -153,7 +152,7 @@
 
     <div class="section content">
       <h2>データ駆動科学，物性理論/マテリアルズインフォマティクス</h2>
-      <p> 脳科学を機械学習で取り扱っていると，この枠組は脳科学以外の分野でも有効であることがわかりました．我々は，この学問分野を問わない新しい枠組をデータ駆動科学となづけました．</p>
+      <p> 脳科学を機械学習で取り扱っていると，この枠組は脳科学以外の分野でも有効であることがわかりました．我々は，この学問分野を問わない新しい枠組を<a href="pdf/datadrivenscience.pdf">データ駆動科学</a>となづけました．</p>
     </div>
 
     <div class="section content">
@@ -165,10 +164,9 @@
         <dd class=para1>
         日本の国力の源泉は物質材料科学にあります．日本はこの分野で常に世界のトップを走り続けてきました．近年，計算機の性能の劇的な向上に伴い，膨大な数の材料探索を計算機の中でのシミュレーションによって行うことが可能になり，世界中で競争が激化しています．資本力で劣る日本が世界に勝つには，低コストかつ高速に材料探索を進める必要があります．私たちは長年の研究で培ってきた<a href="http://sparse-modeling.jp/"target="_blank"rel="noopener noreferrer">スパースモデリング</a>や<a href="https://www.jst.go.jp/kisoken/crest/project/1111092/1111092_2017.html"target="_blank"rel="noopener noreferrer">ベイズ推論</a>に代表されるデータ科学手法を用いてマテリアルズ・インフォマティクスの新しい枠組みを構築し，他分野との連携も通して，世界の普遍的な構造の研究を進めています． </dd>
         <dt class=leftline>計測インフォマティクス</dt>
-        <dd class=para1>計測は科学の母であり(Mother of Science)，計測科学が進歩することにより，多くの科学が進歩します．計測技術の向上は，計測の高度化と計測データの情報処理能力の二点で達成できます．我々は，そのうち，計測データの情報処理能力の向上を目指します．計測科学にベイズ推論を導入したベイズ計測を提案しています．ベイズ計測を用いてSPring-8全ビームラインベイズ化計画や複雑理工学専攻におけるデータ駆動科学の水平展開をおこなっています．</dd>
-		  
-		  <dt class=leftline>脳科学</dt>
-        <dd class=para1>David Marr から始まる計算論的神経科学では，計算理論，表現とアルゴリズム，ハードウェア実装の三つのレベルの視点で脳の情報処理メカニズムを考えます．対象としている系のマクロな計算理論が，ミクロなハードウェア上でどのように実行されるかを議論する，表現とアルゴリズムのレベルを理解するために，私たちは実験から得られたデータを解析しています．深層学習 (Deep Learning) で用いられる畳み込みニューラルネットワークは，一次視覚野の受容野特性にヒントを得て作られました．より高次の脳領野の計算を理論的に理解することは，新たな計算原理に基づく脳型人工知能の開発へと繋がります．具体的には側頭葉のニューロンの特性をデータ駆動科学で解析しています．<a href="https://www.todaishimbun.org/prof_okada_20201102/"target="_blank"rel="noopener noreferrer">東大新聞にその記事が</a>にその記事が載っています．また<a href="https://staff.aist.go.jp/x-matsumoto/pcaresult.html"target="_blank"rel="noopener noreferrer">側頭葉の神経集団ベクトルのビデオ</a>があります．その知見を元に視覚野のモデルを構築しています。</dd>
+        <dd class="para1">計測は科学の母であり(Mother of Science)，計測科学が進歩することにより，多くの科学が進歩します．計測技術の向上は，計測の高度化と計測データの情報処理能力の二点で達成できます．我々は，そのうち，計測データの情報処理能力の向上を目指します．計測科学にベイズ推論を導入した<a href="pdf/bayesianmeasurement.pdf">ベイズ計測</a>を提案しています．<a href="pdf/bayesianmeasurement.pdf">ベイズ計測</a>を用いてSPring-8全ビームラインベイズ化計画や複雑理工学専攻における<a href="pdf/datadrivenscience.pdf">データ駆動科学</a>の水平展開をおこなっています．</dd>
+<dt class=leftline>脳科学</dt>
+        <dd class=para1>David Marr から始まる計算論的神経科学では，計算理論，表現とアルゴリズム，ハードウェア実装の三つのレベルの視点で脳の情報処理メカニズムを考えます．対象としている系のマクロな計算理論が，ミクロなハードウェア上でどのように実行されるかを議論する，表現とアルゴリズムのレベルを理解するために，私たちは実験から得られたデータを解析しています．深層学習 (Deep Learning) で用いられる畳み込みニューラルネットワークは，一次視覚野の受容野特性にヒントを得て作られました．より高次の脳領野の計算を理論的に理解することは，新たな計算原理に基づく脳型人工知能の開発へと繋がります．具体的には側頭葉のニューロンの特性を<a href="pdf/datadrivenscience.pdf">データ駆動科学</a>で解析しています．<a href="https://www.todaishimbun.org/prof_okada_20201102/" target="_blank" rel="noopener noreferrer">東大新聞にその記事が</a>にその記事が載っています．また<a href="https://staff.aist.go.jp/x-matsumoto/pcaresult.html"target="_blank"rel="noopener noreferrer">側頭葉の神経集団ベクトルのビデオ</a>があります．その知見を元に視覚野のモデルを構築しています。</dd>
 		  
         <dt class=leftline>地球惑星科学</dt>
         <dd class=para1>
