--- a/lab.html
+++ b/lab.html
@@ -77,10 +77,10 @@
         <h3><em>News</em></h3>
 		 <p> <dt class=leftline>招待講演</dt>
 2023/3/31 「<a href="https://www.ai-cit-nihon-u.com/symposium/"target="_blank" rel="noopener noreferrer">人工知能とその応用シンポジウム</a>」<br>
-岡田真人　「人工知能応用とデータ駆動科学」<a href="pdf/20230331.pdf">Abstract</a>
+岡田真人　「<a href="pdf/20230331.pdf">人工知能応用とデータ駆動科学</a>」<a href="pdf/20230331abstract.pdf">Abstract</a>
 <p> 2023/3/28-30 「<a href="https://sites.google.com/g.ecc.u-tokyo.ac.jp/ddima/?pli=1" target="_blank" rel="noopener noreferrer">データ駆動科学と情報計測の新展開</a>」<br>
-  岡田真人　「全状態探索型スパースモデリング」<br>
-  岡田真人　「ベイズ推論とSpMに基づく計測の情報数理基盤の構築」</p>
+  岡田真人　「<a href="pdf/20230328.pdf">全状態探索型スパースモデリング</a>」<br>
+岡田真人　「<a href="pdf/20230330.pdf">ベイズ推論とSpMに基づく計測の情報数理基盤の構築</a>」</p>
 <p>
   
   2023/3/7 「<a href="http://www.spring8.or.jp/ja/science/meetings/2023/230307/"target="_blank"rel="noopener noreferrer">第88回SPring-8先端利用技術ワークショップ/「第4回データ駆動科学によるデータ解析高度化～ベイズ計測～</a>」<br>
@@ -94,11 +94,11 @@
 2023/3/22-25 <a href="https://www.jps.or.jp/activities/meetings/spring/spring_index.php"target="_blank"rel="noopener noreferrer">日本物理学会</a><br>
 柏村周平　　「吸収“率”ではなく吸収“量”を対象とした吸収スペクトルのベイズ的解析」<br>
 上田朔　　　「核磁気共鳴法へのデータ駆動科学的手法の開発」<br>
-林　悠偉　　「小角散乱法データを用いた試料パラメータのベイズ推論」<br>
+林　悠偉　　「<a href="pdf/2023jpsj_hayashi.pdf">小角散乱法データを用いた試料パラメータのベイズ推論</a>」<br>
 大日方孝輝　「状態密度に基づく特徴量合成アプローチの信頼度評価」<br>
 町田惇　　　「層構造を対象としたXPSシミュレータによるベイズスペクトル推論」<br>
 森口椋太　　「高次元ベイズ推論のためのnon-reversibleなサンプリング手法」<br>
-竝河伴裕　　「ベイズ推論による光吸収スペクトルのスペクトル分解」<br>
+竝河伴裕　　「<a href="pdf/2023jpsj_nabika.pdf">ベイズ推論による光吸収スペクトルのスペクトル分解</a>」<br>
 塩谷佳介　　「マカクザル側頭葉TE野ニューロンの顔表面特性の表現」<br>
       </div>
     </section>
