[MOD] For newer

--- a/hidden.html
+++ b/hidden.html
@@ -1,5 +1,6 @@
 <html>
 <body>
+<textarea>
 Gmailアカウントのアクティベート
 岡田研M1の皆様
 
@@ -24,5 +25,6 @@ katakami@mns.k.u-tokyo.ac.jp
 
 不明な箇所あります際は、お気軽に連絡ください。
 どうぞよろしくお願いいたします。
+</textarea>
 </body>
 </html>
