[MOD] modify content.

--- a/hidden.html
+++ b/hidden.html
@@ -1,16 +1,12 @@
 <html>
 <body>
+    <a href="https://www.ecc.u-tokyo.ac.jp/doc/announce/newuser_student.html">ここからECCSクラウドメール利用申請</a>
 <textarea cols="80" rows="30">
 Gmailアカウントのアクティベート
 岡田研M1の皆様
 
-研究室でのメールアカウントをアクティベイトするためオンライン新規利用者講習
-https://www.ecc.u-tokyo.ac.jp/doc/announce/newuser_student.html
-を受講して合格しておいてください。(不要になった可能性があります。)
-
-その後、下記URLのUTokyo Account Service Directoryにログインし
-https://www.u-tokyo.ac.jp/adm/dics/ja/account.html(リンク切れ)
-https://www.ecc.u-tokyo.ac.jp/doc/announce/newuser_student.html(こっちで良いはず)
+研究室でのメールアカウントをアクティベイトするため
+https://www.ecc.u-tokyo.ac.jp/doc/announce/newuser_student.htmlから
 ECCSクラウドメールの利用申請を完了してください。
 
 ECCSクラウドメールの利用申請はすぐに承諾されますので (※ ただしGmailにログインできるようになるまで最長1時間かかることがあるようです。)
