--- a/lab.html
+++ b/lab.html
@@ -77,11 +77,17 @@
         <h3><em>News</em></h3>
 		 <p> <dt class=leftline>招待講演</dt>
 2023/3/31 「<a href="https://www.ai-cit-nihon-u.com/symposium/"target="_blank" rel="noopener noreferrer">人工知能とその応用シンポジウム</a>」<br>
-岡田真人　「<a href="pdf/20230331.pdf">人工知能応用とデータ駆動科学</a>」<a href="pdf/20230331abstract.pdf">Abstract</a>
-<p> 2023/3/28-30 「<a href="https://sites.google.com/g.ecc.u-tokyo.ac.jp/ddima/?pli=1" target="_blank" rel="noopener noreferrer">データ駆動科学と情報計測の新展開</a>」<br>
-  岡田真人　「<a href="pdf/20230328.pdf">全状態探索型スパースモデリング</a>」<br>
-岡田真人　「<a href="pdf/20230330.pdf">ベイズ推論とSpMに基づく計測の情報数理基盤の構築</a>」</p>
-<p>
+岡田真人　「<a href="pdf/20230331.pdf">人工知能応用とデータ駆動科学</a>」<a href="pdf/20230331abstract.pdf">Abstract</a><p> 
+	
+2023/3/28-29 「<a href="https://sites.google.com/g.ecc.u-tokyo.ac.jp/ddima/?pli=1" target="_blank" rel="noopener noreferrer">データ駆動科学と情報計測の新展開</a>」<br>
+岡田真人　「<a href="pdf/20230328_opening.pdf">オープニング</a>」<br>
+岡田真人　「<a href="pdf/20230328.pdf">全状態探索型スパースモデリング</a>」<br>
+岡田真人　「<a href="pdf/20230329_closing.pdf">クロージング</a>」<br>
+2023/3/30 「<a href="https://sites.google.com/g.ecc.u-tokyo.ac.jp/ddima/?pli=1" target="_blank" rel="noopener noreferrer">データ駆動科学と情報計測の新展開</a>」<br>
+岡田真人　「<a href="pdf/20230330_opening.pdf">オープニング</a>」<br>
+岡田真人　「<a href="pdf/20230330.pdf">ベイズ推論とSpMに基づく計測の情報数理基盤の構築</a>」<br>
+岡田真人　「<a href="pdf/20230330_closing.pdf">クロージング</a>」<br>
+</p>
   
   2023/3/7 「<a href="http://www.spring8.or.jp/ja/science/meetings/2023/230307/"target="_blank"rel="noopener noreferrer">第88回SPring-8先端利用技術ワークショップ/「第4回データ駆動科学によるデータ解析高度化～ベイズ計測～</a>」<br>
   岡田真人　「<a href="images/20230307_okada.pdf">ベイズ計測</a>」<br>
