--- a/yui/index.html
+++ b/yui/index.html
@@ -1,5 +1,49 @@
-<html>
-<body>
-工事中!!!!!
-</body>
+<!DOCTYPE html>
+<html lang="ja">
+  <head>
+	<meta charset="UTF-8">
+	<title>Kaoru Yui</title>
+  </head>
+
+  <body>
+	<h2>油井 馨 (Kaoru Yui)</h2>  
+	<br>
+	Last updated: April 10, 2023
+	<br>
+	<hr>
+	<ul>
+	  <li>所属</li>
+	  <ul>
+		<li>東京大学大学院 新領域創成科学研究科 複雑理工専攻 岡田研究室</li>
+	  </ul>
+	  <li>連絡先</li>
+	  <ul>
+		<li>部屋 : 柏の葉キャンパス基盤棟 7A4</li
+		<li>E-mail : yui[at]mns.k.u-tokyo.ac.jp</li>
+	  </ul>
+	</ul>
+	<hr>
+	<ul> 
+	  <li>プロフィール</li>
+	  2018.3 千葉県立柏高等学校 卒業<br>
+	  2019.4 東京理科大学 理工学部 情報科学科 入学<br>
+	  2023.3 東京理科大学 理工学部 情報科学科 卒業<br>
+	  2023.4 東京大学大学院　新領域創成科学研究科 複雑理工学専攻 入学<br>
+	</ul>
+	<hr>
+	<ul>
+	  <li>英文学術論文</li>
+	  <ol>
+	  </ol>
+	  <li>国際学会</li>
+	  <ol reversed>
+	  </ol>
+	  <li>国内学会・シンポジウム</li>
+	  <ol reversed>
+	  </ol>
+	</ul>
+ゲーム好きの金欠大学院生です.<br>
+	<br>
+	<a href="../index.html">研究室ホームページTOP</a>
+  </body>
 </html>
