--- a/kambayashi/index.html
+++ b/kambayashi/index.html
@@ -1,5 +1,38 @@
-<html>
-<body>
-工事中!!!!!
-</body>
-</html>
+<html lang="ja"><head>
+	<meta charset="UTF-8">
+	<title>Kambayashi Ibuki</title>
+  </head>
+
+  <body>
+	<h2>上林 生季 (Ibuki Kambayashi)</h2>  
+	<br>
+	Last updated: 4/11/2023 
+	<br>
+	<hr>
+	<ul>
+	  <li>所属</li>
+	  <ul>
+		<li>東京大学大学院 新領域創成科学研究科 複雑理工学専攻 岡田研究室</li>
+	  </ul>
+	  <li>連絡先</li>
+	  <ul>
+		<li>部屋 : 柏の葉キャンパス基盤棟 7A8</li>
+		<li>E-mail : kambayashi@mns.k.u-tokyo.ac.jp</li>
+	  </ul>
+	</ul>
+	<hr>
+	<ul> 
+	  <li>プロフィール</li>
+	  2017.3 江戸川学園取手高等学校 卒業<br>
+	  2018.4 慶應義塾大学 理工学部 入学<br>
+	  2023.3 慶應義塾大学 理工学部 物理学科 卒業<br>
+	  2023.4 東京大学大学院 新領域創成科学研究科 複雑理工学専攻 入学<br>
+	<br>
+    曲を作ったりしています。<br>
+    研究頑張ります。
+	<br>
+	<br>
+	<a href="../index.html">研究室ホームページTOP</a>
+  
+
+</ul></body></html>
