岡田先生のページを修正

--- a/okada/index.html
+++ b/okada/index.html
@@ -105,7 +105,7 @@ Journal of the Physical Society of Japan.92, 044002 (2023)
 	
 <li>Hajime Ueda, Shun Katakami, Shogo Yoshida, Takehide Koyama, Yusuke Nakai, Takeshi Mito, Masaichiro Mizumaki, Masato Okada<br>
 "Bayesian approach to $T_1$ analysis in NMR spectroscopy with applications to solid state physics"<br>
-to be published in J. Phys. Soc. Jpn (2023)
+Journal of the Physical Society of Japan.92, 054002 (2023)
 </li>						
 						
 						
