--- a/lab.html
+++ b/lab.html
@@ -79,7 +79,7 @@
 2023/5/15 「DX-GEM拠点2023年度第2回研究会」<br>
 岡田真人　「ベイズ計測とSPring-8全ビームラインベイズ化計画」<p> 
 2023/4/19 「<a href="https://www.k.u-tokyo.ac.jp/education/seminar/"target="_blank" rel="noopener noreferrer">学融合セミナー</a>」<br>
-岡田真人　「複雑理工学専攻とデータ駆動科学」<p> 
+岡田真人　「<a href="pdf/20230419.pdf">複雑理工学専攻とデータ駆動科学</a>」<p> 
 
 2023/3/31 「<a href="https://www.ai-cit-nihon-u.com/symposium/"target="_blank" rel="noopener noreferrer">人工知能とその応用シンポジウム</a>」<br>
 岡田真人　「<a href="pdf/20230331.pdf">人工知能応用とデータ駆動科学</a>」<a href="pdf/20230331abstract.pdf">Abstract</a><p> 
