[Update] Katakami's page

--- a/katakami/index.html
+++ b/katakami/index.html
@@ -1,5 +1,101 @@
-<html>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>Katakami Shun</title>
+</head>
+
 <body>
-テスト更新
+
+  <h2>片上 舜(Katakami Shun)</h2>
+
+  <br>
+  Last updated: May 30, 2023
+  <br>
+  <hr>
+
+  <ul>
+    <li>所属</li>
+    <ul>
+      <li>東京大学大学院 新領域創成科学研究科 複雑理工学専攻 岡田研究室</li>
+    </ul>
+    <li>連絡先</li>
+    <ul>
+      <li>部屋 : 柏の葉キャンパス基盤棟 7A4</li>
+      <li>E-mail : katakami [at] mns.k.u-tokyo.ac.jp  </li>
+    </ul>
+  </ul>
+  <hr>
+  <ul>
+    <li>プロフィール</li>
+    2021.3 東京大学大学院 理学系研究科 物理学専攻 博士課程 修了<br>
+    2021.4 ~ 東京大学大学院 新領域創成科学研究科 複雑理工学専攻 助教<br>
+  </ul>
+  <hr>
+  <ul>
+    <li>英語学術論文</li>
+      <ol reversed>
+        <li>
+            Hajime Ueda, Shun Katakami, Shogo Yoshida, Takehide Koyama, Yusuke Nakai, Takeshi Mito, Masaichiro Mizumaki, Masato Okada
+            "Bayesian approach to $T_1$ analysis in NMR spectroscopy with applications to solid state physics"
+            Journal of the Physical Society of Japan.92, 054002 (2023)
+        </li>
+        <li>
+            Ryota Moriguchi, Satoshi Tsutsui, Shun Katakami, Kenji Nagata, Masaichiro Mizumaki, Masato Okada
+            "Bayesian Inference on Hamiltonian Selections for Mössbauer Spectroscopy"
+            Journal of the Physical Society of Japan. 91, 104002 (2022)
+        </li>
+        <li>
+            Shun Katakami, Hirotaka Sakamoto, Kenji Nagata, Taka-hisa Arima, and Masato Okada
+            "Bayesian parameter estimation from dispersion relation observation data with Poisson process"
+            Physical Review E 105, 065301(2022)
+        </li>
+        <li>
+            Shuhei Kashiwamura, Shun Katakami, Ryo Yamagami, Kazunori Iwamitsu, Hiroyuki Kumazoe, Kenji Nagata, Toshihiro Okajima, Ichiro Akai and Masato Okada
+            "Bayesian Spectral Deconvolution of X-Ray Absorption Near Edge Structure Discriminating High- and Low-Energy Domain"
+            Journal of the Physical Society of Japan, 91(7), 074009, (2022)
+        </li>
+        <li>
+            Narihisa Matsumoto, Yusuke Taguchi, Masaumi Shimizu, Shun Katakami, Masato Okada and Yasuko Sugase-Miyamoto
+            "Recurrent Connections Might Be Important for Hierarchical Categorization"
+            Frontiers in Systems Neuroscience, 16:805990 (2022)
+        </li>
+        <li>
+            H. Sakamoto, S. Katakami, K. Muto, K. Nagata, T. Arima, and M. Okada
+            “Bayesian Parameter Estimation Using Dispersion Relation Spectra”
+            Journal of the Physical Society of Japan,89, 124002, (2020)
+        </li>
+        <li>
+            Shun Katakami, Hirotaka Sakamoto, and Masato Okada
+            “Bayesian Hyperparameter Estimation using Gaussian Process and Bayesian Optimization”
+            Journal of the Physical Society of Japan,88(7) 074001 - 074001 (2019)
+        </li>
+        <li>
+            Koki Obinata, Shun Katakami, Yonghao Yue and Masato Okada
+            “Ising Model Parameter Estimation with Confidence Evaluation Using the Exchange Monte Carlo Method”
+            Journal of the Physical Society of Japan,88(6), 064802, (2019)
+        </li>
+        <li>
+            Shun Katakami, Hirotaka Sakamoto, Shin Murata, and Masato Okada
+            “Gaussian Markov random field model without boundary conditions”
+            Journal of the Physical Society of Japan, 86(6) 064801(2017)
+        </li>
+      </ol>
+    <li>招待講演</li>
+      <ol reversed>
+        <li>
+            片上舜,「ベイズ推定のスキーム〜全てのユーザーのために〜」, 『第88回SPring-8先端利用技術ワークショップ/「第4回データ駆動科学によるデータ解析高度化～ベイズ計測～」』, SACLA実験研究棟大会議室 及びwebハイブリッド開催 2023年3月.
+        </li>
+        <li>
+            片上舜，有馬孝尚，永田賢二，岡田真人, 「ベイズ計測 ~ 中性子散乱スペクトル解析への導入 ~」，『日本応用数理学会2021年度年会』，オンライン開催，2021年9月
+        </li>
+        <li>
+            片上舜，坂本浩隆，有馬孝尚，永田賢二，岡田真人, 「分散関係観測データに対するベイズモデルパラメータ推定」，『2019年度量子ビームサイエンスフェスタ』，ザ・ヒロサワ・シティ会館，2020年3月
+        </li>
+  </ul>
+  <br>
+  <br>
+  <br>
+  <b><a href="../">戻る</a></b>
 </body>
 </html>
