--- a/hayashi/index.html
+++ b/hayashi/index.html
@@ -8,7 +8,9 @@
   <body>
 	<h2>林　悠偉 (Yui Hayashi)</h2>  
 	<br>
-	Last updated: 4/16/2022 
+	Last updated: 6/5/2023 
+	<li>個人のページは<a href="http://www.yuihayashi.com/">こちら</a>
+</li>
 	<br>
 	<hr>
 	<ul>
@@ -26,12 +28,8 @@
 	<hr>
 	<ul> 
 	  <li>プロフィール</li>
-	  2018.3 東京都立上野高等学校　卒業<br>
-	  2018.4 東京理科大学　理工学部　物理学科 入学<br>
 	  2022.3 東京理科大学　理工学部　物理学科 卒業<br>
 	  2022.4 東京大学大学院　新領域創成科学研究科　複雑理工学専攻　入学<br>
-	<br>
-	 研究に励むスパゲッティコーダーです．<br>
 	<br>
 	<a href="../index.html">研究室ホームページTOP</a>
   </body>
