--- a/lab.html
+++ b/lab.html
@@ -77,7 +77,7 @@
         <h3><em>News</em></h3>
 		 <p> <dt class=leftline>招待講演</dt>
 2023/5/15 「DX-GEM拠点2023年度第2回研究会」<br>
-岡田真人　「ベイズ計測とSPring-8全ビームラインベイズ化計画」<p> 
+岡田真人　「<a href="pdf/20230515DX-GEM.pdf">ベイズ計測とSPring-8全ビームラインベイズ化計画</a>」<p> 
 2023/4/19 「<a href="https://www.k.u-tokyo.ac.jp/education/seminar/"target="_blank" rel="noopener noreferrer">学融合セミナー</a>」<br>
 岡田真人　「<a href="pdf/20230419.pdf">複雑理工学専攻とデータ駆動科学</a>」<p> 
 
