--- a/bayesian.html
+++ b/bayesian.html
@@ -86,6 +86,10 @@
   <section class="maincontent">
 <div class="section content">
       <h2>ベイズ計測の進捗とプレゼンテーション資料，解説，論文</h2>
+	<p class=home>基礎理論</p>
+      <dl>
+<dt class=leftline>直線回帰のベイズ理論</dt> <p>
+<dt class=leftline>スペクトル分解</dt>
       <p class=home> SPring-8全ビームラインベイズ化計画</p>
       <dl>
 <dt class=leftline>メスバウアー分光法</dt>
@@ -126,11 +130,12 @@ Yui Hayashi, Shun Katakami, Shigeo Kuwamoto, Kenji Nagata, Masaichiro Mizumaki, 
 
 Tomohiro Nabika,Kenji Nagata,Shun Katakami,Masaichiro Mizumaki,Masato Okada. <br>
 “Bayesian Spectral Deconvolution Based on Binominal Distribution”, arXiv:2212.07053, December, 2022.<p>
+
+<dt  class=leftline> X線光電子放出スペクトルとX線吸収スペクトルおよびベイズ統合</dt>
 </dd>
-<p class=home> X線光電子放出スペクトルとX線吸収スペクトルおよびベイズ統合</p>
       <dl>
-        <dt class=leftline>実験室での測定</dt>
-		  NMR
+        <p class=home> 実験室での測定</p>
+<dt  class=leftline> NMR</dt>
         <dd class=para1>第25回情報論的学習理論ワークショップ（IBIS2022）<br>
 			上田朔, 片上舜, 吉田章吾, 小山岳秀, 中井祐介, 水戸毅, 水牧仁一郎, 岡田真人<br>
 			「核磁気共鳴法へのデータ駆動科学的アプローチ」<p>
@@ -145,7 +150,7 @@ Tomohiro Nabika,Kenji Nagata,Shun Katakami,Masaichiro Mizumaki,Masato Okada. <br
 			"<a href="https://arxiv.org/abs/2305.05170">Efficient NMR measurement and data analysis supported by the Bayesian inference: The case of the heavy fermion compound YbCo2Zn20</a>", <br>
 			             
         </dd>
-磁化率と比熱およびベイズ統合
+<dt  class=leftline> 磁化率と比熱およびベイズ統合</dt>
         <dd class=para1>第25回情報論的学習理論ワークショップ（IBIS2022）<br>
 西村怜，片上舜，永田賢二，水牧仁一朗，岡田真人<br>
 「複数実験結果を用いたベイズ推論によるパラメータ推定」<p>
@@ -155,8 +160,6 @@ Tomohiro Nabika,Kenji Nagata,Shun Katakami,Masaichiro Mizumaki,Masato Okada. <br
 「ベイズ統合による結晶場ハミルトニアンパラメータ推定」<p>
 
         </dd>
-        <!-- <dt class=leftline>物理モデリング</dt>
-        <dd class=para1>(編集中)</dd> -->
       </dl>
     </div>
   </section>
