--- a/bayesian.html
+++ b/bayesian.html
@@ -90,7 +90,7 @@
       <dl>
 <dt class=leftline>直線回帰のベイズ理論</dt> <p>
 <dt class=leftline>スペクトル分解</dt>
-      <p class=home> SPring-8全ビームラインベイズ化計画</p>
+<p class=home> SPring-8全ビームラインベイズ化計画</p>
       <dl>
 <dt class=leftline>メスバウアー分光法</dt>
         <dd class=para1>
@@ -129,7 +129,8 @@ Yui Hayashi, Shun Katakami, Shigeo Kuwamoto, Kenji Nagata, Masaichiro Mizumaki, 
 「ベイズ推論による光吸収スペクトルのスペクトル分解」<p>
 
 Tomohiro Nabika,Kenji Nagata,Shun Katakami,Masaichiro Mizumaki,Masato Okada. <br>
-“Bayesian Spectral Deconvolution Based on Binominal Distribution”, arXiv:2212.07053, December, 2022.<p>
+“<a href="https://arxiv.org/abs/2212.07053">Bayesian Inference of Absorption Spectra Based on Binomial Distribution</a>”, December, 2022.
+<p>
 
 <dt  class=leftline> X線光電子放出スペクトルとX線吸収スペクトルおよびベイズ統合</dt>
 </dd>
