--- a/bayesian.html
+++ b/bayesian.html
@@ -88,8 +88,16 @@
       <h2>ベイズ計測の進捗とプレゼンテーション資料，解説，論文</h2>
 	<p class=home>基礎理論</p>
       <dl>
-<dt class=leftline>直線回帰のベイズ理論</dt> <p>
+<dt class=leftline>直線回帰のベイズ理論</dt> 
+	   <dd class=para1>
+		   科学研究費補助金新学術領域研究「スパースモデリングの深化と高次元データ駆動科学の創成」<br>
+		   2017年度チュートリアル　第４節</dd>   
 <dt class=leftline>スペクトル分解</dt>
+		<dd class=para1>  
+		  2012年12月17日　物性研<br>
+ベイズ推論と物性科学<br>
+2019年3月6日 <a href="http://www.ar.sanken.osaka-u.ac.jp/SIG-MEI/SIG-MEI_No2.html" target="_blank" rel="noopener noreferrer">第２回計測インフォマティクス研究会（人工知能第２種研究会）</a></dd>   
+
 <p class=home> SPring-8全ビームラインベイズ化計画</p>
       <dl>
 <dt class=leftline>メスバウアー分光法</dt>
@@ -161,6 +169,11 @@ Tomohiro Nabika,Kenji Nagata,Shun Katakami,Masaichiro Mizumaki,Masato Okada. <br
 「ベイズ統合による結晶場ハミルトニアンパラメータ推定」<p>
 
         </dd>
+<p class=home>複雑理工学専攻でのベイズ計測の水平展開</p>
+      <dl>
+<dt  class=leftline> 核融合</dt><p>
+<dt  class=leftline> 惑星科学</dt>
+		  
       </dl>
     </div>
   </section>
